--- a/requirements.txt
+++ b/requirements.txt
@@ -21,6 +21,7 @@ pre_commit==4.0.1
 pycparser==2.22
 PyJWT==2.10.1
 python-dateutil==2.9.0.post0
+python-dotenv==1.0.1
 PyYAML==6.0.2
 requests==2.32.3
 requests-oauthlib==2.0.0
