--- a/requirements.txt
+++ b/requirements.txt
@@ -1,34 +1,35 @@
 asgiref==3.8.1
-bleach==6.1.0
-certifi==2024.12.14
+bleach==4.1.0
+certifi==2025.1.31
 cffi==1.17.1
 cfgv==3.4.0
-charset-normalizer==3.4.0
-cryptography==44.0.0
+charset-normalizer==3.4.1
+cryptography==44.0.1
 distlib==0.3.9
-Django==5.0
-django-allauth==65.3.0
+Django==5.1.6
+django-allauth==65.4.1
 django-auditlog==3.0.0
 django-summernote==0.8.20.0
-filelock==3.16.1
-identify==2.6.3
+filelock==3.17.0
+identify==2.6.7
 idna==3.10
 nodeenv==1.9.1
 oauthlib==3.2.2
-pillow==10.4.0
+packaging==24.2
+pillow==11.1.0
 platformdirs==4.3.6
-pre_commit==4.0.1
+pre_commit==4.1.0
 pycparser==2.22
 PyJWT==2.10.1
+PyMuPDF==1.25.3
 python-dateutil==2.9.0.post0
 python-dotenv==1.0.1
 PyYAML==6.0.2
 requests==2.32.3
 requests-oauthlib==2.0.0
-ruff==0.8.3
-six==1.16.0
-sqlparse==0.4.4
-tzdata==2023.3
-urllib3==2.2.3
-virtualenv==20.28.0
+ruff==0.9.6
+six==1.17.0
+sqlparse==0.5.3
+urllib3==2.3.0
+virtualenv==20.29.2
 webencodings==0.5.1
