--- a/requirements.txt
+++ b/requirements.txt
@@ -9,6 +9,7 @@ distlib==0.3.9
 Django==5.1.6
 django-allauth==65.4.1
 django-auditlog==3.0.0
+django-autoslug==1.9.9
 django-summernote==0.8.20.0
 filelock==3.17.0
 identify==2.6.7
