--- a/requirements.txt
+++ b/requirements.txt
@@ -4,13 +4,15 @@ certifi==2025.1.31
 cffi==1.17.1
 cfgv==3.4.0
 charset-normalizer==3.4.1
+crispy-bootstrap5==2025.4
 cryptography==44.0.1
 distlib==0.3.9
 Django==5.1.6
 django-allauth==65.4.1
 django-auditlog==3.0.0
 django-autoslug==1.9.9
-django-summernote==0.8.20.0
+django-crispy-forms==2.3
+django-tinymce==4.1.0
 filelock==3.17.0
 identify==2.6.7
 idna==3.10
