--- a/requirements.txt
+++ b/requirements.txt
@@ -13,9 +13,8 @@ django-auditlog==3.0.0
 django-autoslug==1.9.9
 django-crispy-forms==2.3
 django-htmx==1.23.0
-django-summernote==0.8.20.0
+django-simple-menu==2.1.3
 django-tinymce==4.1.0
-django-widget-tweaks==1.5.0
 filelock==3.17.0
 identify==2.6.7
 idna==3.10
