--- a/requirements.txt
+++ b/requirements.txt
@@ -14,6 +14,7 @@ django-autoslug==1.9.9
 django-crispy-forms==2.3
 django-htmx==1.23.0
 django-simple-menu==2.1.3
+django-tables2==2.7.5
 django-tinymce==4.1.0
 filelock==3.17.0
 identify==2.6.7
